--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "ethers": "^5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wagmi": "^0.12.9"
   },
   "devDependencies": {
     "@synthetixio/synpress": "^3.5.1",
