chore: remove 'yarn install' comment

--- a/.github/workflows/dapp-e2e.yml
+++ b/.github/workflows/dapp-e2e.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         uses: borales/actions-yarn@v4
         with:
-          cmd: install # will run `yarn install` command
+          cmd: install
 
       - name: Install linux deps
         run: |
