fix: update network name

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 SECRET_WORDS='test test test test test test test test test test test junk'
-NETWORK_NAME='Mumbai'
-CHAIN_ID=80001
-RPC_URL='https://matic-mumbai.chainstacklabs.com'
-SYMBOL="MATIC"
-IS_TESTNET=true
+NETWORK_NAME='polygonMumbai'
