fix: add missing env vars

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 SECRET_WORDS='test test test test test test test test test test test junk'
 NETWORK_NAME='polygonMumbai'
+CHAIN_ID=80001
+RPC_URL='https://matic-mumbai.chainstacklabs.com'
+SYMBOL="MATIC"
+IS_TESTNET=true
