--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "synpress:run": "env-cmd -f .env synpress run --configFile synpress.config.js",
-    "test:e2e": "start-server-and-test 'yarn dev' http://localhost:8080 'yarn synpress:run'"
+    "test:e2e": "start-server-and-test 'yarn dev' http://localhost:8080 'yarn synpress:run'",
+    "test:pw:headless": "playwright test --browser chromium",
+    "test:pw:headed": "yarn test:pw:headless --headed"
   },
   "dependencies": {
     "colors": "^1.4.0",
@@ -18,11 +20,12 @@
     "wagmi": "^0.12.9"
   },
   "devDependencies": {
+    "@playwright/test": "^1.34.3",
     "@synthetixio/synpress": "^3.7.0",
-    "cypress": "12.7.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "cypress": "12.7.0",
     "env-cmd": "^10.1.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
