chore: update playwright test run script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     entrypoint: []
     working_dir: /app
     command: >
-      yarn test:e2e
+      yarn test:e2e:sy
     depends_on:
       - display
     networks:
